--- a/src/css/main.css
+++ b/src/css/main.css
@@ -26,6 +26,13 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 
 /* Bulma Override */
+.button.is-primary {
+    background-color: #002C5F;
+}
+.button.is-primary:hover {
+    background-color: #093B70;
+}
+
 .navbar {
     background-color: #002C5F;
     min-height: 3.25rem;
@@ -100,108 +107,5 @@ a.navbar-item:hover, a.navbar-item.is-active,
         margin-top: -0.375em;
         right: 1.125em;
         top: 50%;
-    }
-}
-
-/*
-CREDIT: https://github.com/Wikiki/bulma-pageloader
-*/
-.pageloader {
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background-color: #002C5F;
-    z-index: 999998;
-    transition: -webkit-transform 0.35s ease-out;
-    transition: transform 0.35s ease-out;
-    transition: transform 0.35s ease-out, -webkit-transform 0.35s ease-out;
-    -webkit-transform: translateY(-100%);
-    transform: translateY(-100%);
-    will-change: transform;
-}
-
-.pageloader.is-active {
-    -webkit-transform: translateY(0);
-    transform: translateY(0);
-}
-
-.pageloader::after, .pageloader::before {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    display: block;
-    border-radius: 100%;
-    content: "";
-    z-index: 999999;
-}
-
-.pageloader::after {
-    margin-top: -100px;
-    margin-left: -100px;
-    width: 200px;
-    height: 200px;
-    background-color: rgba(255, 255, 255, 0.5);
-    border: 3px solid rgba(255, 255, 255, 0.75);
-    -webkit-animation: page-loader-inner 1.5s infinite ease-out;
-    animation: page-loader-inner 1.5s infinite ease-out;
-}
-
-.pageloader::before {
-    margin-top: -30px;
-    margin-left: -30px;
-    width: 60px;
-    height: 60px;
-    background-color: #fff;
-    -webkit-animation: page-loader-outer 1.5s infinite ease-in;
-    animation: page-loader-outer 1.5s infinite ease-in;
-}
-
-@-webkit-keyframes page-loader-inner {
-    0%, 40% {
-        -webkit-transform: scale(0);
-        transform: scale(0);
-    }
-    100% {
-        -webkit-transform: scale(1);
-        transform: scale(1);
-        opacity: 0;
-    }
-}
-
-@keyframes page-loader-inner {
-    0%, 40% {
-        -webkit-transform: scale(0);
-        transform: scale(0);
-    }
-    100% {
-        -webkit-transform: scale(1);
-        transform: scale(1);
-        opacity: 0;
-    }
-}
-
-@-webkit-keyframes page-loader-outer {
-    0% {
-        -webkit-transform: scale(1);
-        transform: scale(1);
-    }
-    100%, 40% {
-        -webkit-transform: scale(0);
-        transform: scale(0);
-        opacity: 0;
-    }
-}
-
-@keyframes page-loader-outer {
-    0% {
-        -webkit-transform: scale(1);
-        transform: scale(1);
-    }
-    100%, 40% {
-        -webkit-transform: scale(0);
-        transform: scale(0);
-        opacity: 0;
     }
 }
